Fix spacing in faq section

--- a/src/styles/components/_faq-item.scss
+++ b/src/styles/components/_faq-item.scss
@@ -3,8 +3,8 @@
 
 .faq {
   &__item {
-    padding: 24px;
     border-radius: 10px;
+    padding-inline: 24px;
     box-shadow: 0 4px 40px rgba(29, 57, 95, 0.08);
     border: 2px solid transparent;
     transition: border-color 0.3s ease;
